--- a/subprojects/testing-jvm/testing-jvm.gradle
+++ b/subprojects/testing-jvm/testing-jvm.gradle
@@ -24,6 +24,7 @@ dependencies {
 
     compile libraries.junit
     compile libraries.testng
+    compile libraries.bsh
 
     testCompile 'com.google.inject:guice:2.0@jar' // this is for TestNG
 
