Add dependency-check plugin to identify security vulnerabilities

--- a/build.gradle
+++ b/build.gradle
@@ -186,6 +186,7 @@ apply from: "gradle/fix-GRADLE-2492.gradle"
 apply from: 'gradle/customM2Check.gradle'
 apply from: "gradle/publicApi.gradle"
 apply from: "gradle/updateReleasedVersions.gradle"
+apply from: "gradle/dependenciesCheck.gradle"
 
 allprojects {
     group = 'org.gradle'
